--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.16.0",
     "express-session": "^1.17.1",
     "http-errors": "~1.6.2",
+    "lodash": "^4.17.19",
     "morgan": "~1.9.0",
     "ws": "^6.1.2"
   }
