--- a/package.json
+++ b/package.json
@@ -7,19 +7,19 @@
     "start": "node app.js 3000"
   },
   "dependencies": {
-    "cookie-parser": "~1.4.3",
+    "cookie-parser": "^1.4.5",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "express": "~4.16.0",
-    "express-session": "^1.17.1",
+    "express-session": "^1.17.2",
     "http-errors": "~1.6.2",
-    "lodash": "^4.17.19",
+    "lodash": "^4.17.21",
     "morgan": "~1.9.0",
-    "ws": "^6.1.2"
+    "ws": "^6.2.2"
   },
   "devDependencies": {
-    "chai": "^4.2.0",
+    "chai": "^4.3.4",
     "chai-http": "^4.3.0",
-    "mocha": "^8.1.1"
+    "mocha": "^8.4.0"
   }
 }
